themes/main/src/sass/_helpers/mixins.scss
@import 'fonts';
@import 'query';
@import 'colors';
@import 'constants';

// Clearfix
//
// For modern browsers
// 1. The space content is one way to avoid an Opera bug when the
//    contenteditable attribute is included anywhere else in the document.
//    Otherwise it causes space to appear at the top and bottom of elements
//    that are clearfixed.
// 2. The use of `table` rather than `block` is only necessary if using
//    `:before` to contain the top-margins of child elements.
//
// Source: http://nicolasgallagher.com/micro-clearfix-hack/


@mixin clearfix() {
  &:before,
  &:after {
    content: " ";
    display: table;
  }
  &:after {
    clear: both;
  }
}

@mixin transition-left(){
  transition:  left 0.1s ease-in-out;
}

@mixin column-lateral-spacing($value: $LATERAL-COLUMN-SPACE) {
  padding-left: $value;
  padding-right: $value;
}

@mixin site-top-spacing($header-height) {
  margin-top: $header-height + 10px;
}

@mixin site-lateral-spacing ($value: auto) {
  margin-left: $value;
  margin-right: $value;
}

@mixin picture-with-caption() {
  figure {
    position: relative;

    img {
      width: 100%;
    }
  }

  figcaption {
    width: 100%;
    position: absolute;
    bottom: 0px;
    text-shadow: 2px 2px 0px #000, 0 0 0 #fff, 1px 1px 0px #000;
    padding: 5px 20px 20px 20px;
    border-radius: 5px;
    background: linear-gradient(to bottom, rgba(19,19,19,0) 0%, rgba(0,0,0,.6) 85%);
  }
}

@mixin image-rounded($width, $height) {
  figure {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    border-radius: 5px;
    width: $width;
    height: $height;
  }
}

@mixin image-rounded-responsive($max-height) {
  figure {
    max-height: $max-height;
    overflow: hidden;
    border-radius: 5px;
    img {
      width: 100%;
    }
  }
}

@mixin section-name() {
  display: block;
  border-bottom: 3px solid $title-underline;
  margin-bottom: 5px;
}

@mixin page-name($line-width: 3px) {
  display: block;
  border-top: $line-width solid $title-underline;
  padding-top: 5px;
}

@mixin person() {
  padding: 10px 0;

  .profile-image {
    width: 70px;
    float: left;
    border-radius: 50%;

    @include media-query(TWO) {
      width: 90px;
    }
  }
}

@mixin page-blockquotes() {
  blockquote {
    max-width: 2 * $COLUMN-WIDTH;
    width: 100%;
    quotes: "\201C""\201D""\2018""\2019";
    padding: 20px 0;
  }

  blockquote:before {
    content: open-quote;
    margin-right: 0.25em;
    vertical-align: -0.4em;
  }

  blockquote:after {
    content: close-quote;
    vertical-align: -0.6em;
  }

  blockquote p {
    display: inline;
  }
}

@mixin button(){
  .pagination-button-container .button {
    width: auto;
    padding: 8px 16px;
    margin: 5px 10px;
  }

  .button {
    display: block;
    border: 1px solid $button-border;
    border-radius: 3px;
    box-shadow: 0px 1px 1px $button-border;
    padding: 8px 0;
    text-align: center;
    width: 100%;
    margin: 5px auto;
    @include media-query (THREE) {
      width: 200px;
    }

    &:visited {
      box-shadow: 1px 2px 1px $button-border;
    }

    &:hover {
      box-shadow: 1px 2px 1px $button-border;
    }
  }

  .button-selected {
    cursor: default;
    pointer-events: none;
    border: 2px solid $button-border-selected;
  }
}

@mixin pagination(){
  .pagination-container {
    margin-top: 5px;
    .pagination-title {
      text-align: center;
    }

    .pagination-button-container {
      display: -webkit-flex; //Old Safari
      display: flex;
      -webkit-justify-content: center; //Old Safari
      justify-content: center;
      -webkit-align-items: center; //Old Safari
      align-items: center;
    }
  }
}

@mixin other-news() {
  @include get-font(OTHER);

  .other-bar {
    margin: 0;
  }

  .other-title {
    @include page-name();
    margin: 0 0 $VERTICAL-SPACE;
  }

  .other-article-container {
    display: -webkit-flex; //Old Safari
    display: flex;
    -webkit-flex-wrap: wrap; //Old Safari
    flex-wrap: wrap;
    -webkit-flex-direction: row; //Old Safari
    flex-direction: row;

    @include media-query(THREE) {
      -webkit-flex-direction: column; //Old Safari
      flex-direction: column;
    }
  }

  .other-article {
    width: 100%;

    @include media-query (THREE) {
      width: $COLUMN-WIDTH;
      margin-left: $LATERAL-COLUMN-SPACE;
    }

    a {
      display: -webkit-flex; //Old Safari
      display: flex;
      -webkit-flex-wrap: nowrap; //Old Safari
      flex-wrap: nowrap;
      -webkit-flex-direction: row; //Old Safari
      flex-direction: row;
      justify-content: flex-start;
      margin-top: $VERTICAL-SPACE;
    }

    .other-article-title {
      padding-left: 10px;
    }
  }
}

